2006-08-31  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.cpp: Avoid resetting an item if it is already set
	  to the value given.

2006-04-11  Simon Goodall  <simon@simongoodall.co.uk>

	* varconf/variable.cpp: Escape backslash characters.

2006-02-19  Al Riddoch  <alriddoch@zepler.org>

	* varconf/Config.h, varconf/variable.h, tests/conftest.cpp:
	  Update usage of sigc++ to the native 2.0 API rather than the
	  deprecated compatability API. Eleminate the manual disconnection
	  code for deleted objects, as this is now handled automatically by
	  sigc::trackable.

2006-01-16  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.4. Interface version 6.0.0.

2006-01-04  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Remove support for obsolete sigc++-1.2.

	* varconf.spec.in: Add libsigc++20-devel to devel rpm.

2006-01-03  Al Riddoch  <alriddoch@zepler.org>

	* varconf/Config.h: Make the default scope of setItem be INSTANCE,
	  for API compatibility.

2005-12-12  Al Riddoch  <alriddoch@zepler.org>

	* varconf/variable.h, varconf/variable.cpp,
	  varconf/dyntypes.h, varconf/dyntypes.cpp,
	  varconf/Config.h, varconf/config.cpp: Add scope to settings to
	  make it easier to manage user and commandline settings
	  separatly from each other.

	* tests/conftest.cpp: Add testing for the scoping mods.

	* varconf/config.h: New header which just include Config.h.
	  Config.h will be deprecaed soon.

2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Include a bug report address, set cross-compile host
	  correctly and clean up.

2005-04-23  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.3. Interface version 4.0.0, or 5.0.0 with sigc++ 2.0.

2005-04-23  Al Riddoch  <alriddoch@zepler.org>

	* AUTHORS: Update AUTHORS file to reflect the current maintainers.

	* NEWS: Add new item for 0.6.3 release.

	* varconf.spec.in: Remove BuildRequires as it doesn't have any real
	  requirements. Some cleanups.

2005-04-23  Al Riddoch  <alriddoch@zepler.org>